<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/tds_info_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tds_info_text"
            android:textColor="#333333"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/water_tds_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/temperature_text"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_title"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_title"
                android:textColor="#333333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_1"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_1"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_2"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_2"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_3"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_3"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_4"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_4"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_5"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_5"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </LinearLayout>

</LinearLayout>