<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/tds_info_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tds_info_text"
                android:textColor="#333333"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/water_tds_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/temperature_text"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_type_text_head"
                android:textColor="#333333"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/water_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/temperature_text"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_type_text_end"
                android:textColor="#333333"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="1.3"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_title"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_title"
                android:textColor="#333333"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_1"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_1"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_2"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_2"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_3"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_3"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_4"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_4"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/tds_value_5"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/water_type_5"
                android:textColor="@color/tds_text_color"
                android:textSize="@dimen/water_type_text_size" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/line_color" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />
    </LinearLayout>

</LinearLayout>