<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_ll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"

    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hint_tv"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_24sp"
            android:text="@string/upgrade_msg" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/cancel_bt"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_item_select"
                android:text="@string/cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@color/line_color" />

            <Button
                android:id="@+id/confirm_bt"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/linearlayout_item_select"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>